--- a/.ci_support/osx_64_numpy1.19python3.8.____cpython.yaml
+++ b/.ci_support/osx_64_numpy1.19python3.8.____cpython.yaml
@@ -1,29 +1,25 @@
+MACOSX_DEPLOYMENT_TARGET:
+- '10.9'
+MACOSX_SDK_VERSION:
+- '10.13'
 c_compiler:
-- gcc
+- clang
 c_compiler_version:
-- '9'
-cdt_name:
-- cos7
+- '13'
 channel_sources:
 - conda-forge
 channel_targets:
 - conda-forge main
-cuda_compiler:
-- nvcc
 cuda_compiler_version:
-- '11.2'
-cudnn:
-- '8'
+- None
 cxx_compiler:
-- gxx
+- clangxx
 cxx_compiler_version:
-- '9'
-docker_image:
-- quay.io/condaforge/linux-anvil-cuda:11.2
+- '13'
 giflib:
 - '5.2'
 grpc_cpp:
-- '1.42'
+- '1.43'
 icu:
 - '69'
 jpeg:
@@ -34,10 +30,10 @@ libpng:
 - '1.6'
 libprotobuf:
 - '3.19'
-nccl:
-- '2'
+macos_machine:
+- x86_64-apple-darwin13.4.0
 numpy:
-- '1.18'
+- '1.19'
 openssl:
 - 1.1.1
 pin_run_as_build:
@@ -63,14 +59,10 @@ snappy:
 sqlite:
 - '3'
 target_platform:
-- linux-64
+- osx-64
 zip_keys:
 - - c_compiler_version
   - cxx_compiler_version
-  - cudnn
-  - cuda_compiler_version
-  - cdt_name
-  - docker_image
 - - python
   - numpy
   - python_impl
