--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,4 +1,5 @@
-{% set version = "2.7.0" %}
+{% set version = "2.7.1" %}
+{% set estimator_version = "2.7.0" %}
 
 package:
   name: tensorflow-split
@@ -6,7 +7,7 @@ package:
 
 source:
   - url: https://github.com/tensorflow/tensorflow/archive/refs/tags/v{{ version }}.tar.gz
-    sha256: bb124905c7fdacd81e7c842b287c169bbf377d29c74c9dacc04f96c9793747bb
+    sha256: abebe2cf5ca379e18071693ca5f45b88ade941b16258a21cc1f12d77d5387a21
     patches:
       - patches/0001-relax-tolerence-in-special_math_test.patch
       - patches/0002-skip-read-only-debugger_cli_common-test.patch
@@ -14,7 +15,7 @@ source:
       # requires setting GRPCIO_VERSION in build script
       - patches/0004-loosen-requirements.patch
       - patches/0005-Replace-deprecated-absl-Status-error_message-call-wi.patch
-  - url: https://github.com/tensorflow/estimator/archive/refs/tags/v{{ version }}.tar.gz
+  - url: https://github.com/tensorflow/estimator/archive/refs/tags/v{{ estimator_version }}.tar.gz
     sha256: e5164e802638d3cf110ecc17912be9d514a9d3354ec48e77200b9403dcc15965
     folder: tensorflow-estimator
 
