--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -32,8 +32,7 @@ requirements:
     - {{ compiler('c') }}
     - {{ compiler('cxx') }}
     - {{ compiler('cuda') }}                 # [cuda_compiler_version != "None"]
-    - bazel
-    - bazel >=4.2.1  # [osx and arm64]
+    - bazel 4.2.2
     - grpc-cpp
     - libprotobuf
     - nasm
@@ -257,8 +256,7 @@ outputs:
         # decide on the cuda variant
         # https://github.com/conda-forge/tensorflow-feedstock/issues/162
         - {{ compiler('cuda') }}                 # [cuda_compiler_version != "None"]
-        - bazel
-        - bazel >=4.2.1  # [osx and arm64]
+        - bazel 4.2.2
       host:
         - python
         - pip
