--- a/conda-forge.yml
+++ b/conda-forge.yml
@@ -6,3 +6,7 @@ provider:
 github:
   branch_name: main
   tooling_branch_name: main
+remote_ci_setup:
+  - conda-forge-ci-setup=3
+  - conda-forge/label/lief_dev::py-lief
+  - conda-forge/label/lief_dev::liblief
