Enable cross-compilation

--- a/recipe/custom_toolchain/cc_wrapper.sh.template
+++ b/recipe/custom_toolchain/cc_wrapper.sh.template
@@ -28,6 +28,8 @@
 set -eu
 
 INSTALL_NAME_TOOL="${INSTALL_NAME_TOOL}"
+export MACOSX_SDK_VERSION="${MACOSX_SDK_VERSION}"
+export MACOSX_DEPLOYMENT_TARGET="${MACOSX_DEPLOYMENT_TARGET}"
 
 LIBS=
 LIB_DIRS=
