Add cross-compilation dependencies

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -23,6 +23,16 @@ requirements:
   build:
     - python                                 # [build_platform != target_platform]
     - cross-python_{{ target_platform }}     # [build_platform != target_platform]
+    - nsync                                  # [build_platform != target_platform]
+    - snappy                                 # [build_platform != target_platform]
+    - giflib                                 # [build_platform != target_platform]
+    - jpeg                                   # [build_platform != target_platform]
+    - icu                                    # [build_platform != target_platform]
+    - libpng                                 # [build_platform != target_platform]
+    - flatbuffers <2.0.6                     # [build_platform != target_platform]
+    - onednn                                 # [build_platform != target_platform]
+    - onednn-cpu-threadpool                  # [build_platform != target_platform]
+    - pybind11                               # [build_platform != target_platform]
     - numpy 1.20.*  # [py<310 and (build_platform != target_platform)]
     - numpy 1.21.*  # [py>=310 and (build_platform != target_platform)]
     - {{ compiler('c') }}
