Add protobuf320 compatibility patches

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -10,6 +10,10 @@ source:
     sha256: 4b487a63d6f0c1ca46a2ac37ba4687eabdc3a260c222616fa414f6df73228cec
     patches:
       - patches/0001-loosen-requirements.patch
+      # Slated for 2.9.0 release
+      # https://github.com/tensorflow/tensorflow/commit/613bcf9f92750bebf88b5f119da8bce83acb4b47
+      - patches/0002-Remove_dependency_on_implementation_ofRepeatedField_iterator.patch
+      - patches/0003-Remove_dependency_on_implementation_ofRepeatedField_iterator.patch
 
   - url: https://github.com/tensorflow/estimator/archive/refs/tags/v{{ estimator_version }}.tar.gz
     sha256: 58a2c3562ca6491c257e9a4d9bd8825667883257edcdb452181efa691c586b17
