--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -14,6 +14,7 @@ source:
       # https://github.com/tensorflow/tensorflow/commit/613bcf9f92750bebf88b5f119da8bce83acb4b47
       - patches/0002-Remove_dependency_on_implementation_ofRepeatedField_iterator.patch
       - patches/0003-Remove_dependency_on_implementation_ofRepeatedField_iterator.patch
+      - patches/0002-Use-oneDNN-systemlib.patch
 
 build:
   number: 0
@@ -100,26 +101,6 @@ requirements:
     - sqlite
     - snappy
     - zlib
-    # requirements specified by the package itself, see
-    # github.com/tensorflow/tensorflow/blob/v{{ version }}/tensorflow/tools/pip_package/setup.py
-    #- absl-py >=0.4.0
-    #- astunparse >=1.6.0
-    #- gast >=0.2.1
-    #- google-pasta >=0.1.1
-    #- h5py >=2.9.0
-    #- keras-preprocessing >=1.1.1
-    #- numpy 1.20.*  # [py<310]
-    #- numpy 1.21.*  # [py>=310]
-    #- opt_einsum >=2.3.2
-    #- protobuf >=3.9.2
-    #- python-flatbuffers >=1.12
-    #- six >=1.12
-    #- termcolor >=1.1.0
-    #- typing_extensions >=3.6.6
-    #- wrapt >=1.11.0
-    ## TF-API needs to move in sync
-    #- tensorboard >=2.8,<2.9
-    #- keras >=2.8,<2.9
   run:
     # avoid that people without GPUs needlessly download ~200-300MB
     - __cuda  # [cuda_compiler_version != "None"]
