--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,4 +1,5 @@
-{% set version = "2.8.0" %}
+{% set version = "2.8.1" %}
+{% set estimator_version = "2.8.0" %}
 
 package:
   name: tensorflow-split
@@ -6,11 +7,11 @@ package:
 
 source:
   - url: https://github.com/tensorflow/tensorflow/archive/refs/tags/v{{ version }}.tar.gz
-    sha256: 66b953ae7fba61fd78969a2e24e350b26ec116cf2e6a7eb93d02c63939c6f9f7
+    sha256: 4b487a63d6f0c1ca46a2ac37ba4687eabdc3a260c222616fa414f6df73228cec
     patches:
       - patches/0001-loosen-requirements.patch
 
-  - url: https://github.com/tensorflow/estimator/archive/refs/tags/v{{ version }}.tar.gz
+  - url: https://github.com/tensorflow/estimator/archive/refs/tags/v{{ estimator_version }}.tar.gz
     sha256: 58a2c3562ca6491c257e9a4d9bd8825667883257edcdb452181efa691c586b17
     folder: tensorflow-estimator
 
