--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -2,7 +2,7 @@
 {% set estimator_version = "2.8.0" %}
 
 package:
-  name: libtfkernel_all_kernels
+  name: libtensorflow_framework
   version: {{ version }}
 
 source:
@@ -32,7 +32,7 @@ build:
     - grpc-cpp
   run_exports:
     # tensorflow makes no ABI guarantees, need to pin to what we built with
-    - libtfkernel_all_kernels {{ version }}
+    - {{ pin_subpackage('libtensorflow_framework', exact=True) }}
 
 requirements:
   build:
@@ -110,7 +110,6 @@ requirements:
 
 test:
   commands:
-    - test -f "${PREFIX}/lib/libtfkernel_all_kernels${SHLIB_EXT}"
     - test -f "${PREFIX}/lib/libtensorflow_framework${SHLIB_EXT}"
 
 about:
