MNT: Re-rendered with conda-build 3.21.8, conda-smithy 3.19.0, and conda-forge-pinning 2022.05.18.07.20.58

--- a/.ci_support/linux_64_abseil_cpp20210324.2c_compiler_version10cuda_compiler_version11.1cxx_compiler_version10grpc_cpp1.45python3.9.____cpython.yaml
+++ b/.ci_support/linux_64_abseil_cpp20210324.2c_compiler_version10cuda_compiler_version11.1cxx_compiler_version10grpc_cpp1.45python3.9.____cpython.yaml
@@ -1,3 +1,5 @@
+abseil_cpp:
+- '20210324.2'
 c_compiler:
 - gcc
 c_compiler_version:
@@ -23,7 +25,7 @@ docker_image:
 giflib:
 - '5.2'
 grpc_cpp:
-- '1.43'
+- '1.45'
 icu:
 - '70'
 jpeg:
@@ -33,7 +35,7 @@ libcurl:
 libpng:
 - '1.6'
 libprotobuf:
-- '3.19'
+- '3.20'
 nccl:
 - '2'
 openssl:
@@ -63,11 +65,13 @@ sqlite:
 target_platform:
 - linux-64
 zip_keys:
+- - abseil_cpp
+  - grpc_cpp
 - - c_compiler_version
-  - cxx_compiler_version
-  - cudnn
-  - cuda_compiler_version
   - cdt_name
+  - cuda_compiler_version
+  - cudnn
+  - cxx_compiler_version
   - docker_image
 - - python
   - python_impl
