--- a/.ci_support/linux_64_abseil_cpp20210324.2c_compiler_version7cuda_compiler_version10.2cxx_compiler_version7grpc_cpp1.45python3.8.____cpython.yaml
+++ b/.ci_support/linux_64_abseil_cpp20210324.2c_compiler_version7cuda_compiler_version10.2cxx_compiler_version7grpc_cpp1.45python3.8.____cpython.yaml
@@ -1,25 +1,31 @@
-MACOSX_DEPLOYMENT_TARGET:
-- '10.9'
-MACOSX_SDK_VERSION:
-- '10.13'
+abseil_cpp:
+- '20210324.2'
 c_compiler:
-- clang
+- gcc
 c_compiler_version:
-- '13'
+- '7'
+cdt_name:
+- cos6
 channel_sources:
 - conda-forge
 channel_targets:
 - conda-forge main
+cuda_compiler:
+- nvcc
 cuda_compiler_version:
-- None
+- '10.2'
+cudnn:
+- '7'
 cxx_compiler:
-- clangxx
+- gxx
 cxx_compiler_version:
-- '13'
+- '7'
+docker_image:
+- quay.io/condaforge/linux-anvil-cos7-cuda:10.2
 giflib:
 - '5.2'
 grpc_cpp:
-- '1.43'
+- '1.45'
 icu:
 - '70'
 jpeg:
@@ -29,9 +35,9 @@ libcurl:
 libpng:
 - '1.6'
 libprotobuf:
-- '3.19'
-macos_machine:
-- x86_64-apple-darwin13.4.0
+- '3.20'
+nccl:
+- '2'
 openssl:
 - 1.1.1
 pin_run_as_build:
@@ -49,7 +55,7 @@ pin_run_as_build:
   zlib:
     max_pin: x.x
 python:
-- 3.7.* *_cpython
+- 3.8.* *_cpython
 python_impl:
 - cpython
 snappy:
@@ -57,10 +63,16 @@ snappy:
 sqlite:
 - '3'
 target_platform:
-- osx-64
+- linux-64
 zip_keys:
+- - abseil_cpp
+  - grpc_cpp
 - - c_compiler_version
+  - cdt_name
+  - cuda_compiler_version
+  - cudnn
   - cxx_compiler_version
+  - docker_image
 - - python
   - python_impl
 zlib:
