--- a/.ci_support/osx_arm64_abseil_cpp20210324.2grpc_cpp1.45python3.8.____cpython.yaml
+++ b/.ci_support/osx_arm64_abseil_cpp20210324.2grpc_cpp1.45python3.8.____cpython.yaml
@@ -1,29 +1,25 @@
+MACOSX_DEPLOYMENT_TARGET:
+- '11.0'
+abseil_cpp:
+- '20210324.2'
 c_compiler:
-- gcc
+- clang
 c_compiler_version:
-- '10'
-cdt_name:
-- cos7
+- '13'
 channel_sources:
 - conda-forge
 channel_targets:
 - conda-forge main
-cuda_compiler:
-- nvcc
 cuda_compiler_version:
-- '11.1'
-cudnn:
-- '8'
+- None
 cxx_compiler:
-- gxx
+- clangxx
 cxx_compiler_version:
-- '10'
-docker_image:
-- quay.io/condaforge/linux-anvil-cuda:11.1
+- '13'
 giflib:
 - '5.2'
 grpc_cpp:
-- '1.43'
+- '1.45'
 icu:
 - '70'
 jpeg:
@@ -33,9 +29,9 @@ libcurl:
 libpng:
 - '1.6'
 libprotobuf:
-- '3.19'
-nccl:
-- '2'
+- '3.20'
+macos_machine:
+- arm64-apple-darwin20.0.0
 openssl:
 - 1.1.1
 pin_run_as_build:
@@ -61,14 +57,12 @@ snappy:
 sqlite:
 - '3'
 target_platform:
-- linux-64
+- osx-arm64
 zip_keys:
+- - abseil_cpp
+  - grpc_cpp
 - - c_compiler_version
   - cxx_compiler_version
-  - cudnn
-  - cuda_compiler_version
-  - cdt_name
-  - docker_image
 - - python
   - python_impl
 zlib:
