--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -3,6 +3,8 @@
 # available on 10.13
 MACOSX_SDK_VERSION:        # [osx and x86_64]
   - "10.13"                # [osx and x86_64]
+channel_sources:
+  - uwe.korn-tf-experimental,conda-forge
 # c_compiler_version:        # [linux]
 #   - 9                      # [linux]
 #   - 7                      # [os.environ.get("CF_CUDA_ENABLED", "False") == "True" and linux64]
