--- a/.ci_support/linux_64_abseil_cpp20210324.2c_compiler_version10cuda_compiler_version11.2cudnn8cxx_compiler_version10grpc_cpp1.45.yaml
+++ b/.ci_support/linux_64_abseil_cpp20210324.2c_compiler_version10cuda_compiler_version11.2cudnn8cxx_compiler_version10grpc_cpp1.45.yaml
@@ -1,23 +1,27 @@
-MACOSX_DEPLOYMENT_TARGET:
-- '10.9'
-MACOSX_SDK_VERSION:
-- '10.13'
 abseil_cpp:
 - '20210324.2'
 c_compiler:
-- clang
+- gcc
 c_compiler_version:
-- '13'
+- '10'
+cdt_name:
+- cos7
 channel_sources:
-- conda-forge
+- uwe.korn-tf-experimental,conda-forge
 channel_targets:
 - conda-forge main
+cuda_compiler:
+- nvcc
 cuda_compiler_version:
-- None
+- '11.2'
+cudnn:
+- '8'
 cxx_compiler:
-- clangxx
+- gxx
 cxx_compiler_version:
-- '13'
+- '10'
+docker_image:
+- quay.io/condaforge/linux-anvil-cuda:11.2
 giflib:
 - '5.2'
 grpc_cpp:
@@ -32,8 +36,8 @@ libpng:
 - '1.6'
 libprotobuf:
 - '3.20'
-macos_machine:
-- x86_64-apple-darwin13.4.0
+nccl:
+- '2'
 openssl:
 - 1.1.1
 pin_run_as_build:
@@ -43,29 +47,24 @@ pin_run_as_build:
     max_pin: x
   libpng:
     max_pin: x.x
-  python:
-    min_pin: x.x
-    max_pin: x.x
   sqlite:
     max_pin: x
   zlib:
     max_pin: x.x
-python:
-- 3.7.* *_cpython
-python_impl:
-- cpython
 snappy:
 - '1'
 sqlite:
 - '3'
 target_platform:
-- osx-64
+- linux-64
 zip_keys:
 - - abseil_cpp
   - grpc_cpp
 - - c_compiler_version
+  - cdt_name
+  - cuda_compiler_version
+  - cudnn
   - cxx_compiler_version
-- - python
-  - python_impl
+  - docker_image
 zlib:
 - '1.2'
