--- a/.ci_support/osx_arm64_abseil_cpp20210324.2grpc_cpp1.45.yaml
+++ b/.ci_support/osx_arm64_abseil_cpp20210324.2grpc_cpp1.45.yaml
@@ -1,27 +1,21 @@
+MACOSX_DEPLOYMENT_TARGET:
+- '11.0'
 abseil_cpp:
 - '20210324.2'
 c_compiler:
-- gcc
+- clang
 c_compiler_version:
-- '10'
-cdt_name:
-- cos6
+- '13'
 channel_sources:
-- conda-forge
+- uwe.korn-tf-experimental,conda-forge
 channel_targets:
 - conda-forge main
-cuda_compiler:
-- nvcc
 cuda_compiler_version:
 - None
-cudnn:
-- undefined
 cxx_compiler:
-- gxx
+- clangxx
 cxx_compiler_version:
-- '10'
-docker_image:
-- quay.io/condaforge/linux-anvil-cos7-x86_64
+- '13'
 giflib:
 - '5.2'
 grpc_cpp:
@@ -36,8 +30,8 @@ libpng:
 - '1.6'
 libprotobuf:
 - '3.20'
-nccl:
-- '2'
+macos_machine:
+- arm64-apple-darwin20.0.0
 openssl:
 - 1.1.1
 pin_run_as_build:
@@ -47,33 +41,20 @@ pin_run_as_build:
     max_pin: x
   libpng:
     max_pin: x.x
-  python:
-    min_pin: x.x
-    max_pin: x.x
   sqlite:
     max_pin: x
   zlib:
     max_pin: x.x
-python:
-- 3.8.* *_cpython
-python_impl:
-- cpython
 snappy:
 - '1'
 sqlite:
 - '3'
 target_platform:
-- linux-64
+- osx-arm64
 zip_keys:
 - - abseil_cpp
   - grpc_cpp
 - - c_compiler_version
-  - cdt_name
-  - cuda_compiler_version
-  - cudnn
   - cxx_compiler_version
-  - docker_image
-- - python
-  - python_impl
 zlib:
 - '1.2'
