--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -90,9 +90,9 @@ test:
     - test -f "${PREFIX}/lib/libtfkernel_conv_ops${SHLIB_EXT}"
     - test -f "${PREFIX}/lib/libtfkernel_cwise_op${SHLIB_EXT}"
     - test -f "${PREFIX}/lib/libtfkernel_unique_op${SHLIB_EXT}"
-    - test -f "${PREFIX}/lib/libtfkernel_dynamic_partition_o${SHLIB_EXT}"
-    - test -f "${PREFIX}/lib/libtfkernel_dynamic_stitch_op${SHLIB_EXT}"
-    - test -f "${PREFIX}/lib/libtfkernel_strided_slice_op${SHLIB_EXT}"
+    # - test -f "${PREFIX}/lib/libtfkernel_dynamic_partition_o${SHLIB_EXT}"
+    # - test -f "${PREFIX}/lib/libtfkernel_dynamic_stitch_op${SHLIB_EXT}"
+    # - test -f "${PREFIX}/lib/libtfkernel_strided_slice_op${SHLIB_EXT}"
 
 about:
   home: http://tensorflow.org/
