--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -4,7 +4,7 @@
 # FIXME: libtensorflow_framework is still copied into the Python package, replace with symlinks
 
 package:
-  name: libtfkernel_conv_ops
+  name: libtfkernel_mlir_ops
   version: {{ version }}
 
 source:
@@ -87,12 +87,7 @@ requirements:
 
 test:
   commands:
-    - test -f "${PREFIX}/lib/libtfkernel_conv_ops${SHLIB_EXT}"
-    # - test -f "${PREFIX}/lib/libtfkernel_cwise_op${SHLIB_EXT}"
-    # - test -f "${PREFIX}/lib/libtfkernel_unique_op${SHLIB_EXT}"
-    # - test -f "${PREFIX}/lib/libtfkernel_dynamic_partition_o${SHLIB_EXT}"
-    # - test -f "${PREFIX}/lib/libtfkernel_dynamic_stitch_op${SHLIB_EXT}"
-    # - test -f "${PREFIX}/lib/libtfkernel_strided_slice_op${SHLIB_EXT}"
+    - test -f "${PREFIX}/lib/libtfkernel_cwise_op${SHLIB_EXT}"
 
 about:
   home: http://tensorflow.org/
