--- a/.ci_support/linux_64_abseil_cpp20210324.2c_compiler_version9cuda_compiler_version11.0cxx_compiler_version9grpc_cpp1.45.yaml
+++ b/.ci_support/linux_64_abseil_cpp20210324.2c_compiler_version9cuda_compiler_version11.0cxx_compiler_version9grpc_cpp1.45.yaml
@@ -3,7 +3,7 @@ abseil_cpp:
 c_compiler:
 - gcc
 c_compiler_version:
-- '10'
+- '9'
 cdt_name:
 - cos7
 channel_sources:
@@ -13,15 +13,15 @@ channel_targets:
 cuda_compiler:
 - nvcc
 cuda_compiler_version:
-- '11.2'
+- '11.0'
 cudnn:
 - '8'
 cxx_compiler:
 - gxx
 cxx_compiler_version:
-- '10'
+- '9'
 docker_image:
-- quay.io/condaforge/linux-anvil-cuda:11.2
+- quay.io/condaforge/linux-anvil-cuda:11.0
 giflib:
 - '5.2'
 grpc_cpp:
@@ -59,6 +59,8 @@ sqlite:
 - '3'
 target_platform:
 - linux-64
+tf_llvm_version:
+- 14.0.0.tf280_55c71c9eac9b
 zip_keys:
 - - abseil_cpp
   - grpc_cpp
