--- a/.ci_support/osx_64_abseil_cpp20210324.2grpc_cpp1.45.yaml
+++ b/.ci_support/osx_64_abseil_cpp20210324.2grpc_cpp1.45.yaml
@@ -14,8 +14,6 @@ channel_targets:
 - conda-forge main
 cuda_compiler_version:
 - None
-cudnn:
-- undefined
 cxx_compiler:
 - clangxx
 cxx_compiler_version:
@@ -57,6 +55,8 @@ sqlite:
 - '3'
 target_platform:
 - osx-64
+tf_llvm_version:
+- 14.0.0.tf280_55c71c9eac9b
 zip_keys:
 - - abseil_cpp
   - grpc_cpp
