--- a/.ci_support/osx_64_abseil_cpp20210324.2grpc_cpp1.45.yaml
+++ b/.ci_support/osx_64_abseil_cpp20210324.2grpc_cpp1.45.yaml
@@ -9,7 +9,7 @@ c_compiler:
 c_compiler_version:
 - '13'
 channel_sources:
-- conda-forge
+- uwe.korn-tf-experimental,conda-forge
 channel_targets:
 - conda-forge main
 cuda_compiler_version:
