--- a/.ci_support/linux_64_abseil_cpp20210324.2c_compiler_version7cuda_compiler_version10.2cudnn7cxx_compiler_version7grpc_cpp1.45.yaml
+++ b/.ci_support/linux_64_abseil_cpp20210324.2c_compiler_version7cuda_compiler_version10.2cudnn7cxx_compiler_version7grpc_cpp1.45.yaml
@@ -3,25 +3,25 @@ abseil_cpp:
 c_compiler:
 - gcc
 c_compiler_version:
-- '10'
+- '7'
 cdt_name:
-- cos7
+- cos6
 channel_sources:
-- conda-forge
+- uwe.korn-tf-experimental,conda-forge
 channel_targets:
 - conda-forge main
 cuda_compiler:
 - nvcc
 cuda_compiler_version:
-- '11.1'
+- '10.2'
 cudnn:
-- '8'
+- '7'
 cxx_compiler:
 - gxx
 cxx_compiler_version:
-- '10'
+- '7'
 docker_image:
-- quay.io/condaforge/linux-anvil-cuda:11.1
+- quay.io/condaforge/linux-anvil-cos7-cuda:10.2
 giflib:
 - '5.2'
 grpc_cpp:
