--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -5,3 +5,5 @@ MACOSX_SDK_VERSION:        # [osx and x86_64]
   - "10.13"                # [osx and x86_64]
 tf_llvm_version:
   - "14.0.0.tf280_55c71c9eac9b"
+channel_sources:
+  - uwe.korn-tf-experimental,conda-forge
