Use pre-built LLVM

--- a/.ci_support/linux_64_abseil_cpp20210324.2c_compiler_version10cuda_compiler_version11.1cudnn8cxx_compiler_version10grpc_cpp1.45.yaml
+++ b/.ci_support/linux_64_abseil_cpp20210324.2c_compiler_version10cuda_compiler_version11.1cudnn8cxx_compiler_version10grpc_cpp1.45.yaml
@@ -57,6 +57,8 @@ sqlite:
 - '3'
 target_platform:
 - linux-64
+tf_llvm_version:
+- 14.0.0.tf280_55c71c9eac9b
 zip_keys:
 - - abseil_cpp
   - grpc_cpp
