--- a/.ci_support/osx_arm64_abseil_cpp20210324.2grpc_cpp1.45.yaml
+++ b/.ci_support/osx_arm64_abseil_cpp20210324.2grpc_cpp1.45.yaml
@@ -51,6 +51,8 @@ sqlite:
 - '3'
 target_platform:
 - osx-arm64
+tf_llvm_version:
+- 14.0.0.tf280_55c71c9eac9b
 zip_keys:
 - - abseil_cpp
   - grpc_cpp
