--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -90,6 +90,7 @@ requirements:
 test:
   commands:
     - test -f "${PREFIX}/lib/libtfkernel_cwise_op.so"
+    - test -f "${PREFIX}/lib/libtfkernel_cwise_op${SHLIB_EXT}"
 
 about:
   home: http://tensorflow.org/
