--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -87,6 +87,7 @@ requirements:
 
 test:
   commands:
+    - test -f "${PREFIX}/lib/libtfkernel_unique_op.so"
     - test -f "${PREFIX}/lib/libtfkernel_unique_op${SHLIB_EXT}"
 
 about:
